MyDevOrg/src/objects/Defect__c.object
<CustomObject>
    <fields>
        <fullName>Defect_Name__c</fullName>
        <label>Defect Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Defects</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Arithmetic Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logic Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Syntax Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi-Threading Programming Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interfacing Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Defect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rupee__c</fullName>
        <label>rupee</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Defect</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Defects_Queue</fullName>
        <filterScope>Queue</filterScope>
        <label>Defects Queue</label>
        <queue>Defects_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Defect Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Defects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>